--- a/style.css
+++ b/style.css
@@ -11,11 +11,12 @@ span{
     top: 50%;
     left: 50%;
     transform:translate(-50%, -50%);
-    padding: 15px;
-    width: 50%;
+    padding: 40px;
+    width: 65%;
     background: black;
-    border-radius: 5px;
+    border-radius: 30px;
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+	text-align: center; /* Center-align text content */
 }
 input{
     outline: none;
@@ -65,13 +66,14 @@ p {
     border: none;
     border-radius: 4px;
     cursor: pointer;
+	text-align: center; /* Center-align text within buttons */
 }
 
 /* Style the heading */
 h1 {
     font-size: 36px;
     color: #9370DB; /* Pearl Purple */
-    font-family: 'Cursive', sans-serif; /* Fancy font */
+    font-family: sans-serif; /* Fancy font */
     margin-bottom: 20px;
 }
 
@@ -83,8 +85,10 @@ h1 {
 
 .button-container {
     display: flex;
+	justify-content: center; /* Center-align items horizontally */
     gap: 10px;
     margin-bottom: 10px;
+	text-align: center; /* Center-align text within buttons */
 }
 
 #clearButton {
@@ -94,4 +98,5 @@ h1 {
     border: none;
     border-radius: 4px;
     cursor: pointer;
+	text-align: center; /* Center-align text within buttons */
 }
