--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@
   border-bottom: 1px solid #4f7df9;
   font-family: "Nunito", sans-serif;
   width: 30%;
+  
 }
 
 .custom-number-input::placeholder {
@@ -80,7 +81,7 @@
 
 
 
-   select {
+   select {  /* Pearl Purple */
     font-size: 15px; 
     padding: 10px;   
     outline: none;
@@ -89,6 +90,7 @@
         font-family: "Nunito", sans-serif;
         height: 40%; 
         border-radius: 12px;
+        
   }
 
     
@@ -286,11 +288,54 @@ button.calculate {
 }
   
 
+.popup {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  font-family: "Nunito", sans-serif;
+  z-index: 999;
+}
 
+.popup-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 20px;
+  border-radius: 30px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  width: 20%;
+  text-align: center;
+  font-weight: bold;
+  overflow: auto;
+}
 
+.popup-close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 0px;
+  cursor: pointer;
+}
 
+.popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: -1; /* Place behind the popup content */
+  cursor: pointer;
+}
 
-
-
-
+@media screen and (max-width: 768px) {
+  .popup-content {
+      max-width: 90%; /* Adjust maximum width for smaller screens */
+  }
 }
