--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-	 background: linear-gradient(to right, #83a4d4, #b6fbff);
+	 /* background: linear-gradient(to right, #83a4d4, #b6fbff); */
+   background: linear-gradient(to right, #001d3d, #000814);
     }
 /* 
   .container {
@@ -21,7 +22,7 @@
 
   .box {
     width: 600px;
-    background: #fafafa;
+    background: #e7ecef;
     border-radius: 20px;
     text-align: center;
     box-shadow: 2px 2px 20px 5px rgba(0,0,0,0.5); 
@@ -37,23 +38,22 @@
 
   p {
   margin: 5px;
-  color: #4D4DFF;
+  color: #168aad;
   text-align: center;
   font-size: 18px;
-  font-family: 'Poppins', sans-serif;
-      font-weight: bold;
+  font-family: "Nunito", sans-serif;
+  font-weight: bold;
 
 }
   h1 { 
-  color: #9370DB;
+  color: #168aad;
   /* Pearl Purple */
- font-family: "Nunito", sans-serif;
-  /* Fancy font */
+  font-family: 'Roboto', sans-serif;  /* Fancy font */
   margin-bottom: 10px;
   padding: 20px 0;
   font-weight: bold;
   text-align: center;
-  font-size: 40px;
+  font-size: 42px;
   }
 
 
@@ -74,22 +74,24 @@
 }
 
 .custom-number-input::placeholder {
-    color: black;
+    color: rgba(0, 0, 0, 0.8);
     font-family: "Nunito", sans-serif;
     font-size: 15px;
+    
 }
 
 
 
-   select {  /* Pearl Purple */
+   select {  
     font-size: 15px; 
     padding: 10px;   
     outline: none;
-        border: none;
-        border-bottom: 1px solid #4f7df9;
-        font-family: "Nunito", sans-serif;
-        height: 40%; 
-        border-radius: 12px;
+    border: none;
+    border-bottom: 1px solid #4f7df9;
+    font-family: "Nunito", sans-serif;
+    height: 40%; 
+    border-radius: 12px;
+    font-weight: bold;
         
   }
 
@@ -100,7 +102,7 @@
     }
     
     .input {
-        background: #fff;
+        background: #f8f8f8;
         box-shadow: 0px 0px 95px -30px rgba(0, 0, 0, 0.15);
         border-radius: 12px;
         padding: 20px 0;
@@ -121,19 +123,19 @@
         outline: none;
         border: none;
         border-bottom: 1px solid #4f7df9;
-        
         text-align: center;
-        font-size: 20px;
+        font-size: 18px;
         height: 35px;    /* Set a fixed height for the input box */
         font-family: "Nunito", sans-serif;
-          border-radius: 12px;
+        border-radius: 12px;
+        font-weight: bold;
     }
 
 
 
     
     .inputW {
-        background: #fff;
+        background: #f8f8f8;
         box-shadow: 0px 0px 95px -30px rgba(0, 0, 0, 0.15);
         border-radius: 12px;
         padding: 10px 0;
@@ -163,7 +165,7 @@
     }
 
     .inputH {
-        background: #fff;
+        background: #f8f8f8;
         box-shadow: 0px 0px 95px -30px rgba(0, 0, 0, 0.15);
         border-radius: 12px;
         padding: 10px 0;
@@ -189,7 +191,8 @@
         border-bottom: 1px solid #4f7df9;
         padding: 10px;  
         text-align: center;
-        font-size: 18px;
+        font-size: 17px;
+        font-weight: bold;
         font-family: "Nunito", sans-serif;
         width: 60%;
         height: 40%; 
@@ -309,7 +312,6 @@ button.calculate {
   padding: 20px;
   border-radius: 30px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-  width: 20%;
   text-align: center;
   font-weight: bold;
   overflow: auto;
